# aiterate

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.release.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-container.yml  publish-testpypi.yml  publish.yml
examples/: notebook_backend_only.py  policies.yml  raw_support_notes.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_model_catalog.py
scripts/: generate_workflow_gif.py
src/aiterate/: __init__.py  audit.py  auth.py  behavior.py  cli.py  config.py  db.py  domain.py  evaluator.py  ingest.py  jobs.py  optimizer.py  pr_publishers.py  pricing.py  project_settings.py  run_store.py  sdk.py  secret_adapters.py  secrets.py  versioning.py  worker.py
src/aiterate/api/: main.py
src/aiterate/migrations/: env.py
src/aiterate/migrations/versions/: 0003_model_prices.py  0004_project_settings.py
src/aiterate/providers/: __init__.py  anthropic_native.py  base.py  bedrock.py  litellm_adapter.py  mock.py  openai_native.py
src/aiterate/tracking/: __init__.py  base.py  langsmith_tracker.py  mlflow_tracker.py
tests/: conftest.py  test_api.py  test_cli.py  test_db.py  test_evaluator.py  test_ingest.py  test_optimizer.py  test_pr_publishers.py  test_secrets.py  test_tracking.py
