[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aiterate"
version = "0.1.2"
description = "AI Artifact Lifecycle Management from raw data and policies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Aiterate contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Version Control :: Git",
]
keywords = [
  "prompt optimization",
  "prompt version control",
  "agent skills",
  "skill optimization",
  "ai artifacts",
  "mlflow",
  "langsmith",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.0",
  "cryptography>=42.0.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "PyJWT>=2.8.0",
  "requests>=2.32.0",
  "python-multipart>=0.0.9",
  "skillopt>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/AthiraSPillai/aiterate"
Repository = "https://github.com/AthiraSPillai/aiterate"
Issues = "https://github.com/AthiraSPillai/aiterate/issues"
Documentation = "https://github.com/AthiraSPillai/aiterate#readme"
Security = "https://github.com/AthiraSPillai/aiterate/security/policy"

[project.optional-dependencies]
providers = [
  "openai>=1.40.0",
  "anthropic>=0.40.0",
  "boto3>=1.34.0",
  "litellm>=1.44.0",
]
postgres = [
  "psycopg[binary]>=3.2.0",
]
managed-secrets = [
  "hvac>=2.3.0",
  "azure-identity>=1.17.0",
  "azure-keyvault-secrets>=4.8.0",
  "google-cloud-secret-manager>=2.20.0",
  "boto3>=1.34.0",
]
tracking = [
  "mlflow>=2.15.0",
  "langsmith>=0.1.100",
]
dev = [
  "build>=1.2.0",
  "pillow>=12.0.0",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "twine>=5.1.0",
]

[project.scripts]
aiterate = "aiterate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aiterate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
